# HongZhongMaJiang

./: .gitignore  README.md  index.html  package-lock.json  package.json  task-summary-2026-04-28.md  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
docs/: ALGORITHM.md  SPEC.md
docs/superpowers/plans/: 2026-06-06-god-view-data-optimization.md
docs/superpowers/specs/: 2026-06-06-god-view-data-optimization-design.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/algorithms/: bayesian.ts  deck.ts  effective-draw.ts  hand-analyzer.ts  pong-decision.ts  probability.ts  shanten.ts  switch-decision.ts
src/components/: AIAnalysisModal.vue  AIChatPanel.vue  BayesianPanel.vue  DecisionPanel.vue  EffectiveDrawPanel.vue  GameModeSelector.vue  GameSetupPanel.vue  GodViewModal.vue  OpponentWinModal.vue  ProbPanel.vue  ScorePanel.vue  TileView.vue
src/components/exercise/: ExerciseDetail.vue  ExerciseView.vue
src/components/tutorial/: TileGroupDemo.vue  TutorialContent.vue  TutorialNav.vue  TutorialView.vue
src/composables/: useLLM.ts  useSimulator.ts
src/data/: exerciseData.ts  tutorialData.ts
src/stores/: gameStore.ts
src/styles/: main.css
src/types/: exercise.ts  index.ts
tests/: effective-draw.test.ts  game-snapshot.test.ts  hand-analyzer.test.ts  jiege-hand.test.ts  probability.test.ts  shanten.test.ts
