[package]
name = "hongzhong-majiang"
version = "1.0.0"
description = "红中麻将概率训练系统"
authors = []
edition = "2021"

[lib]
name = "hongzhong_majiang_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "hongzhong-majiang"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
